Refactor project folder structure. Separate to  differents modules.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <h1>Mini shop</h1>
-<app-product></app-product>
-<app-product-list></app-product-list>
-<app-cart></app-cart>
+<app-products></app-products>
+
 
