--- a/src/app/products/components/product-list/product-list.component.html
+++ b/src/app/products/components/product-list/product-list.component.html
@@ -1,10 +1,3 @@
 <ul>
-  <li *ngFor="let book of productList">
-    <div><strong>Name: {{book.name}}</strong></div>
-    <div>Description: {{book.description}}</div>
-    <div>Price: {{book.price | currency}}</div>
-    <div>Category: {{book.category}}</div>
-    <div>isAvailable: {{book.isAvailable}}</div>
-    <button (click)="onBuy(book)">Buy book</button>
-  </li>
+  <app-product [productList]="productList" (bookedProduct)="onBuy($event)"></app-product>
 </ul>
