Add posiibility to remove item in cart

--- a/src/app/cart/components/cart-item/cart-item.component.html
+++ b/src/app/cart/components/cart-item/cart-item.component.html
@@ -1,3 +1,6 @@
-<p>
-  cart-item works!
-</p>
+<div class="cart-item-container" [ngClass]="{'active': cartItem.active}">
+  <div class="cart-item">{{cartItem.name}}</div>
+  <div class="cart-item">{{cartItem.cartCount}}</div>
+  <div class="cart-item">{{cartItem.price | currency}}</div>
+  <button class="cart-item-remove" (click)="removeCartItem(cartItem.id)">Remove</button>
+</div>
