--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,7 +1,7 @@
-<div><strong>Name: {{product.name}}</strong></div>
+<div [ngClass]="{ 'notAvailable': !product.isAvailable }"><strong>Name: {{product.name}}</strong></div>
 <div>Description: {{product.description}}</div>
 <div>Price: {{product.price | currency}}</div>
 <div>Category: {{product.category}}</div>
-<div>Count: {{product.availableCount}}</div>
+<div [ngClass]="{ 'notAvailable': !product.isAvailable }">Count: {{product.availableCount}}</div>
 <div>isAvailable: {{product.isAvailable}}</div>
 <button [disabled]="!product.isAvailable" (click)="onBuy(product)">Add to Cart</button>
