--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Mini shop</h1>
+<h1 #appTitle></h1>
 <app-product-list></app-product-list>
-<app-cart-list></app-cart-list>
+<app-cart-list>Cart: </app-cart-list>
 
 
