--- a/src/app/cart/components/cart-list/cart-list.component.css
+++ b/src/app/cart/components/cart-list/cart-list.component.css
@@ -1,22 +1,24 @@
-/* ul, li {
-    padding: 0;
-    margin: 0;
-} */
 
 .cart-list-container {
     width: 500px;
 }
 
 .cart-list-header {
-    display: flex;
-    justify-content: space-around;
-    /* width: 500px; */
+    list-style: none;
+    font-weight: bold;
+    width: 500px;
 }
 
 .cart-list-header-item {
+    box-sizing: border-box;
+    display: inline-block;
     width: 100px;
 }
 
 .cart-list-header-item:first-child {
     width: 300px;
+}
+
+.cart-list-header-item:last-child {
+    padding-left: 20px;
 }
