--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1 #appTitle></h1>
 <app-product-list></app-product-list>
 <app-cart-list>Cart: </app-cart-list>
+<app-contact-us></app-contact-us>
 
 
