--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,28 @@
-<h1 #appTitle></h1>
+<div class="app-wrapper-container">
+    
+    <header class="app-header-container">
+        <h1 #appTitle></h1>
+        <nav>
+            <ul class="app-nav-bar">
+                <li class="app-nav-item">
+                    <a>Catalog</a>
+                </li>
+                <li class="app-nav-item">
+                    <a>Cart</a>
+                </li>
+                <li class="app-nav-item">
+                    <a>Admin</a>
+                </li>
+                <li class="app-nav-item">
+                    <a>Login</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main class="app-main-container">
+
+    </main>
+</div>
 <app-product-list></app-product-list>
 <app-cart-list>Cart: </app-cart-list>
 <app-contact-us></app-contact-us>
