--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,26 +5,29 @@
         <nav>
             <ul class="app-nav-bar">
                 <li class="app-nav-item">
-                    <a>Catalog</a>
+                    <a routerLink="/home">Catalog</a>
                 </li>
                 <li class="app-nav-item">
-                    <a>Cart</a>
+                    <a routerLink="/cart">Cart</a>
                 </li>
                 <li class="app-nav-item">
-                    <a>Admin</a>
+                    <a routerLink="/about">About</a>
                 </li>
                 <li class="app-nav-item">
                     <a>Login</a>
+                </li>
+                <li class="app-nav-item">
+                    <a>Admin</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main class="app-main-container">
-
+        <router-outlet></router-outlet>
     </main>
 </div>
-<app-product-list></app-product-list>
+<!-- <app-product-list></app-product-list>
 <app-cart-list>Cart: </app-cart-list>
-<app-contact-us></app-contact-us>
+<app-contact-us></app-contact-us> -->
 
 
