--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,31 @@
 <div class="app-wrapper-container">
-    
     <header class="app-header-container">
-        <h1 #appTitle></h1>
-        <nav>
+        <h1 #appTitle class="app-title"></h1>
+        <nav class="app-nav-container">
             <ul class="app-nav-bar">
-                <li class="app-nav-item">
-                    <a routerLink="/home">Catalog</a>
+                <li class="app-nav-item" routerLinkActive="active">
+                    <a routerLink="/catalog">Catalog</a>
                 </li>
-                <li class="app-nav-item">
-                    <a routerLink="/cart">Cart</a>
+                <li class="app-nav-item" routerLinkActive="active">
+                    <a  routerLink="/cart">
+                        Cart
+                        <span *ngIf="cartCount | async as count" class="cart-count">{{count}}</span>
+                    </a>
                 </li>
-                <li class="app-nav-item">
+                <li class="app-nav-item" routerLinkActive="active">
                     <a routerLink="/about">About</a>
                 </li>
-                <li class="app-nav-item">
-                    <a>Login</a>
+                <li class="app-nav-item" routerLinkActive="active">
+                    <a routerLink="/login">Login</a>
                 </li>
-                <li class="app-nav-item">
-                    <a>Admin</a>
+                <li class="app-nav-item" routerLinkActive="active">
+                    <a routerLink="/admin">Admin</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main class="app-main-container">
+    <main class="app-content-container">
         <router-outlet></router-outlet>
+        <router-outlet name="reviews"></router-outlet>
     </main>
 </div>
-<!-- <app-product-list></app-product-list>
-<app-cart-list>Cart: </app-cart-list>
-<app-contact-us></app-contact-us> -->
-
-
