--- a/src/app/cart/components/cart-list/cart-list.component.html
+++ b/src/app/cart/components/cart-list/cart-list.component.html
@@ -29,7 +29,7 @@
       <app-cart-item [cartItem]="item" (removeItem)="onRemoveItem($event)"></app-cart-item>
     </li>
   </ul>
-  <p>Total books in cart: {{totalCartCount}}</p>
+  <p>Total books in cart: {{totalCartCount | async}}</p>
 </div>
 <ng-template #emptyCart>
   <div>
